# ChronosDB

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  INSTALL.md  README.md  demo.fsql  docker-compose.yml  install.ps1  install.sh  installer.iss  package.json  qc  test_enterprise_parsing.fsql
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURAL_AUDIT.md  ARCHITECTURE_EXPLAINED.md  AUDIT_IMPLEMENTATION_STATUS.md  CHRONOSDB_ARCHITECTURE_GLOSSARY.md  FRANCODB_ARCHITECTURE_GLOSSARY.md  RECOVERY_ARCHITECTURE.md  TIME_TRAVEL_OPTIMIZATION.md  implementation_Phases  project_plan.docx  test_commands.txt
docs/documentation/: COMPLETION_REPORT.md  DELIVERABLES_CHECKLIST.md  DOCUMENTATION_INDEX.md  ENTERPRISE_FEATURES.md  FINAL_VERIFICATION.md  FIX_SERVICE_1053.md  IMPLEMENTATION_GUIDE.md  INDEX.md  INSTALLER_README.md  INTEGRATION_DEPLOYMENT.md  PROJECT_COMPLETE_SUMMARY.md  QUICK_START_S_PLUS.md  README_DOCKER.md  README_S_PLUS.md  REBUILD_SERVICE.md  SDK_README.md  S_PLUS_ENHANCEMENTS.md  S_PLUS_TEST_SUITE.md  S_PLUS_UPGRADE_SUMMARY.md  TESTING_GUIDE.md  VERIFICATION_CHECKLIST.md  encryption_key_explanation.md  file_structure_explanation.md  password_hash_explanation.md
examples/: CMakeLists.txt  cpp_example.cpp  javascript_example.js  python_example.py
installers/: README.md
installers/docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
installers/linux/: README.md  build_deb.sh
installers/windows/: ChronosDBUtils.ps1  README.md  installer.iss  start_server.bat  start_server.vbs  stop_server.bat  stop_server.vbs
libaries/: chronosdb.js  chronosdb.py
resources/: README_ICON.md  create_icon.ps1
src/: CMakeLists.txt  shell.cpp
src/buffer/: buffer_pool_manager.cpp  clock_replacer.cpp  lru_replacer.cpp
src/catalog/: catalog.cpp  index_info.cpp
src/cmd/server/: main.cpp
src/cmd/service/: service_wrapper.cpp
src/cmd/setup/: setup.cpp
src/cmd/shell/: shell.cpp
src/common/: auth_manager.cpp  config_manager.cpp  encryption.cpp  result_formatter.cpp  rid.cpp  type.cpp  value.cpp
src/execution/: execution_engine.cpp  foreign_key_manager.cpp
src/execution/executors/: aggregate_executor.cpp  database_executor.cpp  ddl_executor.cpp  delete_executor.cpp  dml_executor.cpp  executor_registry.cpp  index_scan_executor.cpp  insert_executor.cpp  join_executor.cpp  query_executors.cpp  seq_scan_executor.cpp  system_executor.cpp  transaction_executor.cpp  update_executor.cpp  user_executor.cpp
src/include/buffer/: adaptive_buffer_pool.h  adaptive_distributed_buffer_pool.h  buffer_pool_manager.h  clock_replacer.h  lru_replacer.h  page_guard.h  partitioned_buffer_pool_manager.h  replacer.h
src/include/catalog/: catalog.h  foreign_key.h  index_info.h  table_metadata.h
src/include/common/: auth_manager.h  chronos_net_config.h  config.h  config_manager.h  crc32.h  encryption.h  exception.h  logger.h  result_formatter.h  rid.h  rwlatch.h  thread_pool.h  type.h  value.h
src/include/concurrency/: lock_manager.h  transaction.h  transaction_manager.h
src/include/execution/: database_executor.h  ddl_executor.h  dml_executor.h  execution_engine.h  execution_result.h  executor_context.h  executor_factory.h  foreign_key_manager.h  predicate_evaluator.h  system_executor.h  transaction_executor.h  user_executor.h
src/include/execution/executors/: abstract_executor.h  aggregate_executor.h  delete_executor.h  index_scan_executor.h  insert_executor.h  join_executor.h  query_executors.h  seq_scan_executor.h  update_executor.h
src/include/network/: chronos_client.h  chronos_server.h  connection_handler.h  database_registry.h  franco_server.h  packet.h  protocol.h  session_context.h
src/include/parser/: advanced_statements.h  extended_statements.h  lexer.h  parser.h  statement.h  token.h
src/include/recovery/: checkpoint_index.h  checkpoint_manager.h  checkpoint_snapshot_manager.h  log_manager.h  log_page_reader.h  log_record.h  recovery_manager.h  snapshot_manager.h  table_snapshot.h  time_travel_engine.h
src/include/storage/: storage_interface.h
src/include/storage/disk/: disk_manager.h
src/include/storage/index/: b_plus_tree.h  index_iterator.h  index_key.h
src/include/storage/page/: b_plus_tree_internal_page.h  b_plus_tree_leaf_page.h  b_plus_tree_page.h  free_page_manager.h  page.h
src/include/storage/table/: column.h  (+5 more)
src/network/: chronos_client.cpp  chronos_server.cpp  connection_handler.cpp  database_registry.cpp  franco_client.cpp  franco_server.cpp  protocol.cpp
src/parser/: lexer.cpp  parser.cpp
src/recovery/: checkpoint_index.cpp  checkpoint_manager.cpp  checkpoint_snapshot_manager.cpp  log_manager.cpp  recovery_manager.cpp  table_snapshot.cpp  time_travel_engine.cpp
src/storage/disk/: disk_manager.cpp
src/storage/index/: b_plus_tree.cpp
src/storage/page/: b_plus_tree_internal_page.cpp  b_plus_tree_leaf_page.cpp  b_plus_tree_page.cpp
src/storage/table/: column.cpp  schema.cpp  table_heap.cpp  table_page.cpp  tuple.cpp
test/: CMAKE_TEST_GUIDE.md  CMakeLists.txt  README_TESTS.md  run_all_tests.cpp
test/buffer/: buffer_pool_test.cpp
test/concurrency/: threadpool_test.cpp  threadpool_write_read_test.cpp  transaction_test.cpp
test/execution/: column_tests.cpp  execution_test.cpp  foreign_key_tests.cpp  groupby_tests.cpp  index_execution_test.cpp  integration_tests.cpp  join_tests.cpp  limit_distinct_tests.cpp  orderby_tests.cpp
test/framework/: test_runner.h
test/modules/: module_tests_stub.cpp
test/network/: json_client_test.cpp
test/parser/: enterprise_parser_test.cpp  lexer_test.cpp  parser_test.cpp
test/recovery/: checkpoint_test.cpp  log_manager_test.cpp  test_time_travel.cpp  time_travel_test.cpp
test/storage/: full_storage_system_test.cpp
test/storage/disk/: disk_recycle_test.cpp  disk_test.cpp
test/storage/index/: b_plus_tree_concurrent_test.cpp  b_plus_tree_split_test.cpp  b_plus_tree_test.cpp
test/storage/table/: table_heap_test.cpp  tuple_test.cpp
test/system/: chronosdb_system_test.cpp  consistency_client.cpp  francodb_system_test.cpp  stress_client.cpp
